añadiendo Firebase-ESP32 de https://github.com/mobizt/Firebase-ESP32

--- a/VeltiumCharger/main/CMakeLists.txt
+++ b/VeltiumCharger/main/CMakeLists.txt
@@ -1,2 +1,13 @@
-idf_component_register(SRCS "main.cpp" "WS2812.cpp" "control.cpp" "blowfish.cpp" "dev_auth.cpp" "serverble.cpp" "controlLed.cpp" "DRACO_IO.cpp"
-                    INCLUDE_DIRS ".")
+idf_component_register(SRCS
+"main.cpp"
+"WS2812.cpp"
+"control.cpp"
+"blowfish.cpp"
+"dev_auth.cpp"
+"serverble.cpp"
+"controlLed.cpp"
+"DRACO_IO.cpp"
+"FirebaseJson.cpp"
+"FirebaseESP32.cpp"
+"FirebaseESP32HTTPClient.cpp"
+INCLUDE_DIRS ".")
