--- a/pio/VeltiumChargerRCS/platformio.ini
+++ b/pio/VeltiumChargerRCS/platformio.ini
@@ -13,4 +13,4 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-board_build.partitions = partitions.csv
+board_build.partitions = partitions.cs
