--- a/pio/VeltiumChargerRCS/platformio.ini
+++ b/pio/VeltiumChargerRCS/platformio.ini
@@ -8,9 +8,20 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+
+[env:upstream_develop]
+;platform = espressif32@1.12.0
 platform = espressif32
-board = esp32dev
 framework = arduino
+board = esp-wrover-kit
+
+; change microcontroller
+board_build.mcu = esp32
+
+; change MCU frequency
+board_build.f_cpu = 240000000L
+
 monitor_speed = 115200
-board_build.partitions = partitions.cs
+board_build.partitions = partitions.csv
+
+;lib_extra_dirs = C:\Users\dbuch\Dropbox\coding\Arduino\libraries
