Actualizacion del PSOC5

--- a/pio/VeltiumChargerRCS/platformio.ini
+++ b/pio/VeltiumChargerRCS/platformio.ini
@@ -10,8 +10,8 @@
 
 
 [env:upstream_develop]
-;platform = espressif32@1.12.0
-platform = espressif32
+platform = espressif32@1.12.0
+;platform = espressif32
 framework = arduino
 board = esp-wrover-kit
 
