--- a/pio/VeltiumChargerRCS/platformio.ini
+++ b/pio/VeltiumChargerRCS/platformio.ini
@@ -16,3 +16,4 @@ board_build.mcu = esp32
 board_build.f_cpu = 240000000L
 monitor_speed = 115200
 board_build.partitions = partitions.csv
+lib_deps = me-no-dev/ESP Async WebServer@^1.2.3
