--- a/pio/VeltiumChargerRCS/platformio.ini
+++ b/pio/VeltiumChargerRCS/platformio.ini
@@ -17,4 +17,6 @@ board_build.f_cpu = 240000000L
 monitor_speed = 115200
 board_build.partitions = partitions.csv
 build_flags = -DBOARD_HAS_PSRAM
-              -mfix-esp32-psram-cache-issue
+			  -mfix-esp32-psram-cache-issue
+			  
+lib_deps =  mobizt/Firebase ESP32 Client @ ^3.8.12
