--- a/pio/VeltiumChargerRCS/.vscode/settings.json
+++ b/pio/VeltiumChargerRCS/.vscode/settings.json
@@ -6,6 +6,7 @@
         "string_view": "cpp",
         "initializer_list": "cpp",
         "utility": "cpp",
-        "functional": "cpp"
+        "functional": "cpp",
+        "PRUEBA.C": "cpp"
     }
 }
