Custom firebase library + Wifi ESP update

--- a/VeltiumCharger/.vscode/settings.json
+++ b/VeltiumCharger/.vscode/settings.json
@@ -8,31 +8,30 @@
                 "name": "BUILD",
                 "color": "white",
                 "singleInstance": true,
-                "command": ". /home/jon/Documents/SDK_4/idf_4_0/esp-idf/./export.sh && cd /home/jon/Documents/fw-bird-esp32/VeltiumCharger/ && make",
+                "command": ". /home/joel/Documents/SDK_4/idf_4_0/esp-idf/./export.sh && cd /home/joel/Documents/fw-bird-esp32/VeltiumCharger/ && make",
             },
             {
                 "name": "MFM",
                 "color": "white",
                 "singleInstance": true,
-                "command": ". /home/jon/Documents/SDK_4/idf_4_0/esp-idf/./export.sh && cd /home/jon/Documents/fw-bird-esp32/VeltiumCharger/ && make flash monitor",
+                "command": ". /home/joel/Documents/SDK_4/idf_4_0/esp-idf/./export.sh && cd /home/joel/Documents/fw-bird-esp32/VeltiumCharger/ && make flash monitor",
             },
             {
                 "name": "MONITOR",
                 "color": "white",
                 "singleInstance": true,
-                "command": ". /home/jon/Documents/SDK_4/idf_4_0/esp-idf/./export.sh && cd /home/jon/Documents/fw-bird-esp32/VeltiumCharger/ && make monitor",
+                "command": ". /home/joel/Documents/SDK_4/idf_4_0/esp-idf/./export.sh && cd /home/joel/Documents/fw-bird-esp32/VeltiumCharger/ && make monitor",
             },
             {
                 "name": "MENUCONFIG",
                 "color": "white",
                 "singleInstance": true,
-                "command": ". /home/jon/Documents/SDK_4/idf_4_0/esp-idf/./export.sh && cd /home/jon/Documents/fw-bird-esp32/VeltiumCharger/ && make menuconfig",
+                "command": ". /home/joel/Documents/SDK_4/idf_4_0/esp-idf/./export.sh && cd /home/joel/Documents/fw-bird-esp32/VeltiumCharger/ && make menuconfig",
             },
             {
                 "name": "FLASH",
                 "color": "white",
                 "singleInstance": true,
-<<<<<<< HEAD
                 "command": ". /home/joel/Documents/SDK_4/idf_4_0/esp-idf/./export.sh && cd /home/joel/Documents/fw-bird-esp32/VeltiumCharger/ && make flash",
             },
             {
@@ -66,15 +65,10 @@
                 "command": ". /home/joel/Documents/SDK_4/idf_4_2/esp-idf/./export.sh && cd /home/joel/Documents/fw-bird-esp32/VeltiumCharger/ && make flash",
             },
 
-=======
-                "command": ". /home/jon/Documents/SDK_4/idf_4_0/esp-idf/./export.sh && cd /home/jon/Documents/fw-bird-esp32/VeltiumCharger/ && make clear",
-            }
->>>>>>> comunicaciones
         ]
     },
     "C_Cpp.errorSquiggles": "Enabled",
     "files.associations": {
-<<<<<<< HEAD
         "array": "cpp",
         "*.tcc": "cpp",
         "memory": "cpp",
@@ -98,16 +92,23 @@
         "limits": "cpp",
         "fstream": "cpp",
         "complex": "cpp",
-        "condition_variable": "cpp"
+        "condition_variable": "cpp",
+        "atomic": "cpp",
+        "strstream": "cpp",
+        "chrono": "cpp",
+        "iterator": "cpp",
+        "memory_resource": "cpp",
+        "optional": "cpp",
+        "new": "cpp",
+        "ostream": "cpp",
+        "shared_mutex": "cpp",
+        "sstream": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp",
+        "system_error": "cpp",
+        "thread": "cpp"
     },
     "git.ignoreLimitWarning": true
-=======
-        "*.tcc": "cpp",
-        "optional": "cpp",
-        "system_error": "cpp",
-        "regex": "cpp"
-    }
->>>>>>> comunicaciones
 }
 
 
