--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,5 +37,6 @@
  
          ]
     },
+    "python.pythonPath": "C:\\Users\\Veltium5\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
  }
  
