--- a/VeltiumCharger/.vscode/settings.json
+++ b/VeltiumCharger/.vscode/settings.json
@@ -39,5 +39,8 @@
     ]
 },
 "C_Cpp.errorSquiggles": "Enabled",
-"C_Cpp.dimInactiveRegions": false
+"C_Cpp.dimInactiveRegions": false,
+"files.associations": {
+    "cmath": "cpp"
+}
 }
