--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,5 +38,8 @@
          ]
     },
     "python.pythonPath": "C:\\Users\\Veltium5\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
+    "files.associations": {
+        "string": "cpp"
+    },
  }
  
