--- a/VeltiumCharger/Makefile
+++ b/VeltiumCharger/Makefile
@@ -8,9 +8,9 @@ PROJECT_NAME := VBLE2
 include $(IDF_PATH)/make/project.mk
 
 #cargar archivos al spiffs
-SPIFFS_IMAGE_FLASH_IN_PROJECT := 1
+SPIFFS_IMAGE_FLASH_IN_PROJECT := 0
 #$(eval $(call spiffs_create_partition_image,spiffs,data))
-$(eval $(call spiffs_create_partition_image,WebServer,data/WebServer))
-$(eval $(call spiffs_create_partition_image,PSOC5,data))
+#$(eval $(call spiffs_create_partition_image,WebServer,data/WebServer))
+#$(eval $(call spiffs_create_partition_image,PSOC5,data))
 #$(eval $(call spiffs_create_partition_image,ESP32,data))
 
