Quitar algunos prints

--- a/VeltiumCharger/.vscode/settings.json
+++ b/VeltiumCharger/.vscode/settings.json
@@ -57,6 +57,7 @@
     "cdecode.h": "c",
     "array": "cpp",
     "string": "cpp",
-    "ratio": "cpp"
+    "ratio": "cpp",
+    "*.contiki": "cpp"
 }
 }
