Fix en reinicio diario advertising, fix en desconexión de usuario BLE inactivo 10min y fix en deteccion de usuarios desconectados.

--- a/VeltiumCharger/.vscode/settings.json
+++ b/VeltiumCharger/.vscode/settings.json
@@ -74,7 +74,8 @@
     "cstdio": "cpp",
     "new": "cpp",
     "bitset": "cpp",
-    "utility": "cpp"
+    "utility": "cpp",
+    "chrono": "cpp"
 },
 "cmake.configureOnOpen": false
 }
